--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Telephasic by HTML5 UP</title>
+		<title>Right Sidebar - Telephasic by HTML5 UP</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -23,7 +23,7 @@
 			<link rel="stylesheet" href="css/style-n1.css" />
 		</noscript>
 	</head>
-	<body class="homepage">
+	<body class="right-sidebar">
 
 		<!-- Header Wrapper -->
 			<div id="header-wrapper">
@@ -63,107 +63,116 @@
 
 					</div>
 
-				<!-- Hero -->
-					<section id="hero" class="container">
-						<header>
-							<h2>Telephasic is a responsive<br />
-							site template by <a href="http://html5up.net/">HTML5 UP</a></h2>
-						</header>
-						<p>Designed and built on <a href="http://skeljs.org">skelJS</a> by <a href="http://n33.co">AJ</a>. Released for free under<br />
-						the <a href="http://html5up.net/license/">Creative Commons Attribution 3.0 license</a>.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Get this party started</a></li>
-						</ul>
-					</section>
-
 			</div>
 
-		<!-- Features 1 -->
+		<!-- Main Wrapper -->
 			<div class="wrapper">
 
 				<div class="container">
-					<div class="row">
-						<section class="6u feature">
+					<div class="row" id="main">
+						<div class="8u">
+					
+							<!-- Content -->
+								<article id="content">
+									<header>
+										<h2>Right Sidebar</h2>
+										<span>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit
+										dolor neque semper magna lorem ipsum.</span>
+									</header>
+									<a href="http://ineedchemicalx.deviantart.com/art/Mind-is-a-clear-stage-375431607" class="image full"><img src="images/pic01.jpg" alt="" /></a>
+									<p>Ut sed tortor luctus, gravida nibh eget, volutpat odio. Proin rhoncus, sapien 
+									mollis luctus hendrerit, orci dui viverra metus, et cursus nulla mi sed elit. Vestibulum 
+									condimentum, mauris a mattis vestibulum, urna mauris cursus lorem, eu fringilla lacus 
+									ante non est. Nullam vitae feugiat libero, eu consequat sem. Proin tincidunt neque 
+									eros. Duis faucibus blandit ligula, mollis commodo risus sodales at. Sed rutrum et 
+									turpis vel blandit. Nullam ornare congue massa, at commodo nunc venenatis varius. 
+									Praesent mollis nisi at vestibulum aliquet. Sed sagittis congue urna ac consectetur.</p>
+									<p>Mauris eleifend eleifend felis aliquet ornare. Vestibulum porta velit at elementum
+									gravida nibh eget, volutpat odio. Proin rhoncus, sapien 
+									mollis luctus hendrerit, orci dui viverra metus, et cursus nulla mi sed elit. Vestibulum 
+									condimentum, mauris a mattis vestibulum, urna mauris cursus lorem, eu fringilla lacus 
+									ante non est. Nullam vitae feugiat libero, eu consequat sem. Proin tincidunt neque 
+									eros. Duis faucibus blandit ligula, mollis commodo risus sodales at. Sed rutrum et 
+									turpis vel blandit. Nullam ornare congue massa, at commodo nunc venenatis varius. 
+									Praesent mollis nisi at vestibulum aliquet. Sed sagittis congue urna ac consectetur.</p>
+									<p>Vestibulum pellentesque posuere lorem non aliquam. Mauris eleifend eleifend 
+									felis aliquet ornare. Vestibulum porta velit at elementum elementum.</p>
+								</article>
+
+						</div>
+						<div class="4u">
+
+							<!-- Sidebar -->
+								<section id="sidebar">
+									<section>
+										<header>
+											<h3>Elit sed feugiat</h3>
+										</header>
+										<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur et vel 
+										sem sit amet dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et dolore 
+										adipiscing elit. Curabitur vel sem sit.</p>
+										<ul class="actions">
+											<li><a href="#" class="button">Magna amet nullam</a></li>
+										</ul>
+									</section>
+									<section>
+										<a href="http://ineedchemicalx.deviantart.com/art/Boundless-291831118" class="image full"><img src="images/pic07.jpg" alt="" /></a>
+										<header>
+											<h3>Commodo lorem varius</h3>
+										</header>
+										<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur et vel 
+										sem sit amet dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et dolore 
+										adipiscing elit. Curabitur vel sem sit.</p>
+										<ul class="actions">
+											<li><a href="#" class="button">Ipsum sed dolor</a></li>
+										</ul>
+									</section>
+								</section>
+					
+						</div>
+					</div>
+					<div class="row features">
+						<section class="4u feature">
 							<div class="image-wrapper first">
-								<a href="http://ineedchemicalx.deviantart.com/art/Mind-is-a-clear-stage-375431607" class="image full first"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="http://ineedchemicalx.deviantart.com/art/Time-goes-by-too-fast-335982438" class="image full"><img src="images/pic03.jpg" alt="" /></a>
 							</div>
 							<header>
-								<h2>Semper magna neque vel<br />
-								adipiscing curabitur</h2>
+								<h3>Dolor sit consequat magna</h3>
 							</header>
-							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel 
-							sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed 
-							adipiscing elit. Curabitur vel sem sit.</p>
+							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur 
+							vel sem sit dolor neque semper magna lorem ipsum.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">Elevate my awareness</a></li>
 							</ul>
 						</section>
-						<section class="6u feature">
+						<section class="4u feature">
 							<div class="image-wrapper">
-								<a href="http://ineedchemicalx.deviantart.com/art/Freebird-378379295" class="image full"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="http://ineedchemicalx.deviantart.com/art/Kingdom-of-the-Wind-348268044" class="image full"><img src="images/pic04.jpg" alt="" /></a>
 							</div>
 							<header>
-								<h2>Amet lorem ipsum dolor<br />
-								sit consequat magna</h2>
+								<h3>Dolor sit consequat magna</h3>
 							</header>
-							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel 
-							sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed 
-							adipiscing elit. Curabitur vel sem sit.</p>
+							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur 
+							vel sem sit dolor neque semper magna lorem ipsum.</p>
+							<ul class="actions">
+								<li><a href="#" class="button">Elevate my awareness</a></li>
+							</ul>
+						</section>
+						<section class="4u feature">
+							<div class="image-wrapper">
+								<a href="http://ineedchemicalx.deviantart.com/art/Elysium-355393900" class="image full"><img src="images/pic05.jpg" alt="" /></a>
+							</div>
+							<header>
+								<h3>Dolor sit consequat magna</h3>
+							</header>
+							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur 
+							vel sem sit dolor neque semper magna lorem ipsum.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">Elevate my awareness</a></li>
 							</ul>
 						</section>
 					</div>
 				</div>
-
-			</div>
-			
-		<!-- Promo -->
-			<div id="promo-wrapper">
-			
-				<section id="promo">
-					<h2>Neque semper magna et lorem ipsum adipiscing</h2>
-					<a href="http://ineedchemicalx.deviantart.com/art/A-breath-of-Hope-366359145" class="button">Breach the thresholds</a>
-				</section>
-			
-			</div>
-			
-		<!-- Features 2 -->
-			<div class="wrapper">
-			
-				<section class="container">
-					<header class="major">
-						<h2>Sed magna consequat lorem curabitur tempus</h2>
-						<span>Elit aliquam vulputate egestas euismod nunc semper vehicula lorem blandit</span>
-					</header>
-					<div class="row features">
-						<section class="4u feature">
-							<div class="image-wrapper first">
-								<a href="http://ineedchemicalx.deviantart.com/art/Time-goes-by-too-fast-335982438" class="image full"><img src="images/pic03.jpg" alt="" /></a>
-							</div>
-							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur 
-							vel sem sit dolor neque semper magna lorem ipsum.</p>
-						</section>
-						<section class="4u feature">
-							<div class="image-wrapper">
-								<a href="http://ineedchemicalx.deviantart.com/art/Kingdom-of-the-Wind-348268044" class="image full"><img src="images/pic04.jpg" alt="" /></a>
-							</div>
-							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur 
-							vel sem sit dolor neque semper magna lorem ipsum.</p>
-						</section>
-						<section class="4u feature">
-							<div class="image-wrapper">
-								<a href="http://ineedchemicalx.deviantart.com/art/Elysium-355393900" class="image full"><img src="images/pic05.jpg" alt="" /></a>
-							</div>
-							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur 
-							vel sem sit dolor neque semper magna lorem ipsum.</p>
-						</section>
-					</div>
-					<ul class="actions major">
-						<li><a href="#" class="button">Elevate my awareness</a></li>
-					</ul>
-				</section>
-			
 			</div>
 
 		<!-- Footer Wrapper -->
