--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ title: Bootstrap/Jekyll Hybrid!
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="../jekyll_index.html">About</a></li>
+              <li><a href="./jekyll_index.html">About</a></li>
               <li><a href="#contact">Contact</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
