--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 layout: default
 title: Jekyll Base
 ---
-   <style> 
 
+<!-- Styles -->
+   <style> 
       .hero-unit{
         background-repeat:no-repeat;
         background-position:right top;
@@ -12,8 +13,17 @@ title: Jekyll Base
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
       }
 
+
       .banner-phone{
-       background-image:url("./assets/img/wet_banner_phone.jpg");
+        background-image:url("./assets/img/wet_banner_phone.jpg");
+        background-repeat:no-repeat;
+        background-position:right top;
+        background-size: cover;
+        background-color: black;
+        color: white;
+        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+        margin: -20px -20px 30px -20px;
+        padding: 30px;
       }
 
       .banner-phone h1{
@@ -30,6 +40,12 @@ title: Jekyll Base
 
     </style>
 
+    <div class="visible-phone banner-phone">
+      <h1>Aaron Heuckroth</h1>
+      <p>Something about being a nerd goes here.</p>
+      <p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    </div>
+
     <div class="container">
       <!-- Main hero unit for a primary marketing message or call to action -->
 
@@ -39,14 +55,6 @@ title: Jekyll Base
         <p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
       </div>
 
-    <div class="row">
-      <div class="hero-unit visible-phone banner-phone">
-        <h1>Aaron Heuckroth</h1>
-        <p>Something about being a nerd goes here.</p>
-        <p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-      </div>
-
-    <div class="row">
       <div class="hero-unit visible-tablet banner-tablet">
         <h1>Aaron Heuckroth</h1>
         <p>Something about being a nerd goes here.</p>
