Fixed up image sizing for wet banners, added fist banners.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ title: Jekyll Base
       .hero-unit{
         background-repeat:no-repeat;
         background-position:right top;
+        background-color: black;
         background-size: cover;
         color: white;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
@@ -15,11 +16,33 @@ title: Jekyll Base
         padding-bottom: 20px;
       }
 
+      .p-fist {
+        background-image:url("./assets/img/fist_banner_phone4.jpg");
+      }
+
+      .t-fist {
+       background-image:url("./assets/img/fist_banner_tablet4.jpg");
+      }
+
+      .d-fist{
+       background-image:url("./assets/img/fist_banner4.jpg");
+      }
+
+      .p-wet {
+        background-image:url("./assets/img/wet_banner_phone.jpg");
+      }
+
+      .t-wet {
+       background-image:url("./assets/img/wet_banner_tablet.jpg");
+      }
+
+      .d-wet{
+       background-image:url("./assets/img/wet_banner.jpg");
+      }        
 
       .banner-phone{
-        background-image:url("./assets/img/wet_banner_phone.jpg");
         background-repeat:no-repeat;
-        background-position:right top;
+        background-position:right-top;
         background-size: cover;
         background-color: black;
         color: white;
@@ -35,12 +58,7 @@ title: Jekyll Base
       .banner-phone h3{
         font-size: 1.5em;
         font-weight: lighter;
-        font-style: italic;
         line-height: 70%;
-      }
-
-      .banner-tablet{
-       background-image:url("./assets/img/wet_banner_tablet.jpg");
       }
 
       .banner-tablet h1{
@@ -50,17 +68,11 @@ title: Jekyll Base
       .banner-tablet h3{
         font-size: 1.5em;
         font-weight: lighter;
-        font-style: italic;
-      }
-
-      .banner-desktop{
-       background-image:url("./assets/img/wet_banner.jpg");
       }
 
       .banner-desktop h3{
         font-size: 1.5em;
         font-weight: lighter;
-        font-style: italic;
       }
       
       .banner-desktop h1{
@@ -73,9 +85,9 @@ title: Jekyll Base
 
     </style>
 
-    <div class="visible-phone banner-phone">
+    <div class="visible-phone banner-phone p-fist">
       <h1>Aaron Heuckroth</h1>
-      <h3>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</h3>
+      <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
       <ol>
         <li>Synthetic Biologist; Bio-Geek</li>
         <li>Software Developer-in-Training</li>
@@ -86,9 +98,9 @@ title: Jekyll Base
     <div class="container">
       <!-- Main hero unit for a primary marketing message or call to action -->
 
-      <div class="hero-unit visible-desktop banner-desktop">
+      <div class="hero-unit visible-desktop banner-desktop d-fist">
       <h1>Aaron Heuckroth</h1>
-      <h3>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</h3>
+      <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
       <ol>
         <li>Synthetic Biologist; Bio-Geek</li>
         <li>Software Developer-in-Training</li>
@@ -96,9 +108,9 @@ title: Jekyll Base
       </ol>
     </div>
 
-      <div class="hero-unit visible-tablet banner-tablet">
+      <div class="hero-unit visible-tablet banner-tablet t-fist">
       <h1>Aaron Heuckroth</h1>
-      <h3>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</h3>
+      <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
       <ol>
         <li>Synthetic Biologist; Bio-Geek</li>
         <li>Software Developer-in-Training</li>
@@ -128,7 +140,7 @@ title: Jekyll Base
       <hr>
 
             <footer>
-        <p>&copy; Aaron Heuckroth, 2013</p>
+        <p>&copy; Aaron Heuckroth, 2013. Photos courtesy of <a href="http://www.benjaminlehman.com/">Benjamin Lehman Photography</a>.</p>
       </footer>
     </div> <!-- /container -->
 
