Modified container stacking for index.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Jekyll Base
         color: white;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
         padding-top: 20px;
-        padding-bottom: 20px;
+        padding-bottom: 10px;
       }
 
       .p-fist {
@@ -40,14 +40,20 @@ title: Jekyll Base
        background-image:url("./assets/img/wet_banner.jpg");
       }        
 
+      .phone-container{
+        margin: -20px -20px 30px -20px;
+        padding: 0px;
+        background-position: right-top;
+      }
+
       .banner-phone{
-        background-repeat:no-repeat;
-        background-position:right-top;
+        background-repeat: no-repeat;
+        background-position: right-top;
         background-size: cover;
         background-color: black;
         color: white;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-        margin: -20px -20px 30px -20px;
+        margin: 0px;
         padding: 15px 30px 15px 30px;
       }
 
@@ -84,8 +90,8 @@ title: Jekyll Base
       }
 
     </style>
-
-    <div class="visible-phone banner-phone p-fist">
+    <div class="container visible-phone phone-container">
+    <div class="visible-phone banner-phone p-wet">
       <h1>Aaron Heuckroth</h1>
       <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
       <ol>
@@ -93,30 +99,34 @@ title: Jekyll Base
         <li>Software Developer-in-Training</li>
         <li>Musician</li>
       </ol>
+    </div>
+  </div>
+
+    <div class="container hero-container">
+      <!-- Main hero unit for a primary marketing message or call to action -->
+
+      <div class="hero-unit visible-desktop banner-desktop d-wet">
+        <h1>Aaron Heuckroth</h1>
+        <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
+        <ol>
+          <li>Synthetic Biologist; Bio-Geek</li>
+          <li>Software Developer-in-Training</li>
+          <li>Musician</li>
+        </ol>
+      </div>
+
+      <div class="hero-unit visible-tablet banner-tablet t-wet">
+        <h1>Aaron Heuckroth</h1>
+        <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
+        <ol>
+          <li>Synthetic Biologist; Bio-Geek</li>
+          <li>Software Developer-in-Training</li>
+          <li>Musician</li>
+        </ol>
+      </div>
     </div>
 
     <div class="container">
-      <!-- Main hero unit for a primary marketing message or call to action -->
-
-      <div class="hero-unit visible-desktop banner-desktop d-fist">
-      <h1>Aaron Heuckroth</h1>
-      <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
-      <ol>
-        <li>Synthetic Biologist; Bio-Geek</li>
-        <li>Software Developer-in-Training</li>
-        <li>Musician</li>
-      </ol>
-    </div>
-
-      <div class="hero-unit visible-tablet banner-tablet t-fist">
-      <h1>Aaron Heuckroth</h1>
-      <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
-      <ol>
-        <li>Synthetic Biologist; Bio-Geek</li>
-        <li>Software Developer-in-Training</li>
-        <li>Musician</li>
-      </ol>
-    </div>
 
       <!-- Example row of columns -->
       <div class="row">
