--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 layout: default
 title: Jekyll Base
 ---
-
 <!-- Styles -->
    <style> 
       .hero-unit{
@@ -17,15 +16,15 @@ title: Jekyll Base
       }
 
       .p-fist {
-        background-image:url("./assets/img/fist_banner_phone4.jpg");
+        background-image:url("./assets/img/fist_banner_phone.jpg");
       }
 
       .t-fist {
-       background-image:url("./assets/img/fist_banner_tablet4.jpg");
+       background-image:url("./assets/img/fist_banner_tablet.jpg");
       }
 
       .d-fist{
-       background-image:url("./assets/img/fist_banner4.jpg");
+       background-image:url("./assets/img/fist_banner.jpg");
       }
 
       .p-wet {
@@ -40,12 +39,6 @@ title: Jekyll Base
        background-image:url("./assets/img/wet_banner.jpg");
       }        
 
-      .phone-container{
-        margin: -20px -20px 30px -20px;
-        padding: 0px;
-        background-position: right-top;
-      }
-
       .banner-phone{
         background-repeat: no-repeat;
         background-position: right;
@@ -53,7 +46,7 @@ title: Jekyll Base
         background-color: black;
         color: white;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-        margin: 0px;
+        margin: -20px -20px 30px -20px;
         padding: 15px 30px 15px 30px;
       }
 
@@ -88,10 +81,9 @@ title: Jekyll Base
       .banner-desktop small{
         color: white;
       }
-
     </style>
-    <div class="container visible-phone phone-container">
-    <div class="visible-phone banner-phone p-fist">
+    <div class="container">
+    <div class="hero-unit banner-desktop d-fist heuck-banner">
       <h1>Aaron Heuckroth</h1>
       <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
       <ol>
@@ -99,11 +91,9 @@ title: Jekyll Base
         <li>Software Developer-in-Training</li>
         <li>Musician</li>
       </ol>
-    </div>
-  </div>
+    </div> <!-- end of banner -->
 
-    <div class="container hero-container">
-      <!-- Main hero unit for a primary marketing message or call to action -->
+      <!-- Main hero unit for a primary marketing message or call to action
 
       <div class="hero-unit visible-desktop banner-desktop d-wet">
         <h1>Aaron Heuckroth</h1>
@@ -125,7 +115,7 @@ title: Jekyll Base
         </ol>
       </div>
     </div>
-
+  -->
     <div class="container">
 
       <!-- Example row of columns -->
@@ -153,10 +143,4 @@ title: Jekyll Base
         <p>&copy; Aaron Heuckroth, 2013. Photos courtesy of <a href="http://www.benjaminlehman.com/">Benjamin Lehman Photography</a>.</p>
       </footer>
     </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!--<script src="../assets/js/jquery-1.10.2.min.js"></script>
-    <script src="./assets/js/bootstrap.min.js"></script>-->
 
