Altered banner response behavior, began pagination for blog, restructured site.

--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@ title: Aaron Heuckroth
       }
 
       .p-fist {
-        background-image:url("./assets/img/fist_banner_phone.jpg");
+        background-image:url("/assets/img/fist_banner_phone.jpg");
       }
 
       .t-fist {
-       background-image:url("./assets/img/fist_banner_tablet.jpg");
+       background-image:url("/assets/img/fist_banner_tablet.jpg");
       }
 
       .d-fist{
-       background-image:url("./assets/img/fist_banner.jpg");
+       background-image:url("/assets/img/fist_banner.jpg");
       }
 
       .p-wet {
-        background-image:url("./assets/img/wet_banner_phone.jpg");
+        background-image:url("/assets/img/wet_banner_phone.jpg");
       }
 
       .t-wet {
-       background-image:url("./assets/img/wet_banner_tablet.jpg");
+       background-image:url("/assets/img/wet_banner_tablet.jpg");
       }
 
       .d-wet{
-       background-image:url("./assets/img/wet_banner.jpg");
+       background-image:url("/assets/img/wet_banner.jpg");
       }        
 
       .banner-phone{
@@ -82,11 +82,15 @@ title: Aaron Heuckroth
         color: white;
       }
 
+      .invisible-banner{
+        visibility: hidden;
+      }
+
 
 
     </style>
     <div class="container">
-    <div class="hero-unit banner-desktop d-fist heuck-banner">
+    <div class="heuck-banner invisible-banner">
       <h1>Aaron Heuckroth</h1>
       <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
       <ol>
@@ -94,31 +98,8 @@ title: Aaron Heuckroth
         <li>Software Developer-in-Training</li>
         <li>Musician</li>
       </ol>
-    </div> <!-- end of banner -->
+    </div> <!-- End Header -->
 
-      <!-- Main hero unit for a primary marketing message or call to action
-
-      <div class="hero-unit visible-desktop banner-desktop d-wet">
-        <h1>Aaron Heuckroth</h1>
-        <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
-        <ol>
-          <li>Synthetic Biologist; Bio-Geek</li>
-          <li>Software Developer-in-Training</li>
-          <li>Musician</li>
-        </ol>
-      </div>
-
-      <div class="hero-unit visible-tablet banner-tablet t-wet">
-        <h1>Aaron Heuckroth</h1>
-        <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
-        <ol>
-          <li>Synthetic Biologist; Bio-Geek</li>
-          <li>Software Developer-in-Training</li>
-          <li>Musician</li>
-        </ol>
-      </div>
-    </div>
-  -->
     <div class="container">
 
       <!-- Example row of columns -->
@@ -146,4 +127,6 @@ title: Aaron Heuckroth
         <p>&copy; Aaron Heuckroth, 2013. Photos courtesy of <a href="http://www.benjaminlehman.com/">Benjamin Lehman Photography</a>.</p>
       </footer>
     </div> <!-- /container -->
+
+  <script src="/assets/js/banner_response.js"></script>
 
