Add blog functionality with pagination, use site url for script path for index.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Aaron Heuckroth
 ---
 <!-- Styles -->
    <style> 
+
       .hero-unit{
         background-repeat:no-repeat;
         background-position:right;
@@ -128,5 +129,5 @@ title: Aaron Heuckroth
       </footer>
     </div> <!-- /container -->
 
-  <script src="/assets/js/banner_response.js"></script>
+  <script src="{{ site.url }}/assets/js/banner_response.js"></script>
 
