--- a/index.html
+++ b/index.html
@@ -3,131 +3,49 @@ layout: default
 title: Aaron Heuckroth
 ---
 <!-- Styles -->
-   <style> 
 
-      .hero-unit{
-        background-repeat:no-repeat;
-        background-position:right;
-        background-color: black;
-        background-size: cover;
-        color: white;
-        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-        padding-top: 20px;
-        padding-bottom: 10px;
-      }
+<link href="{{ site.url }}/assets/css/splash.css" rel="stylesheet">
 
-      .p-fist {
-        background-image:url("/assets/img/fist_banner_phone.jpg");
-      }
+<div class="container">
+  <div id="main-banner" class="invisible-banner" data-banners='[
+  {"name": "fist", "phone": "p-fist", "tablet": "t-fist", "desktop": "d-fist"},
+  {"name": "wet", "phone": "p-wet", "tablet": "t-wet", "desktop": "d-wet"}]'>
+    <h1>Aaron Heuckroth</h1>
+    <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
+    <ol>
+      <li>Synthetic Biologist; Bio-Geek</li>
+      <li>Software Developer-in-Training</li>
+      <li>Musician</li>
+    </ol>
+  </div> <!-- End Header -->
 
-      .t-fist {
-       background-image:url("/assets/img/fist_banner_tablet.jpg");
-      }
+  <div class="container">
 
-      .d-fist{
-       background-image:url("/assets/img/fist_banner.jpg");
-      }
-
-      .p-wet {
-        background-image:url("/assets/img/wet_banner_phone.jpg");
-      }
-
-      .t-wet {
-       background-image:url("/assets/img/wet_banner_tablet.jpg");
-      }
-
-      .d-wet{
-       background-image:url("/assets/img/wet_banner.jpg");
-      }        
-
-      .banner-phone{
-        background-repeat: no-repeat;
-        background-position: right;
-        background-size: cover;
-        background-color: black;
-        color: white;
-        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-        margin: -20px -20px 30px -20px;
-        padding: 15px 30px 15px 30px;
-      }
-
-      .banner-phone h1{
-        font-size:2.5em;
-      }
-
-      .banner-phone h3{
-        font-size: 1.5em;
-        font-weight: lighter;
-        line-height: 70%;
-      }
-
-      .banner-tablet h1{
-      font-size: 3.0em;
-      }
-
-      .banner-tablet h3{
-        font-size: 1.5em;
-        font-weight: lighter;
-      }
-
-      .banner-desktop h3{
-        font-size: 1.5em;
-        font-weight: lighter;
-      }
-      
-      .banner-desktop h1{
-        font-size: 3.0em;
-      }
-
-      .banner-desktop small{
-        color: white;
-      }
-
-      .invisible-banner{
-        visibility: hidden;
-      }
-
-
-
-    </style>
-    <div class="container">
-    <div class="heuck-banner invisible-banner">
-      <h1>Aaron Heuckroth</h1>
-      <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
-      <ol>
-        <li>Synthetic Biologist; Bio-Geek</li>
-        <li>Software Developer-in-Training</li>
-        <li>Musician</li>
-      </ol>
-    </div> <!-- End Header -->
-
-    <div class="container">
-
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span4">
-          <h2>Blog</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="span4">
-          <h2>About</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
-        <div class="span4">
-          <h2>Contact</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
+    <!-- Example row of columns -->
+    <div class="row">
+      <div class="span4">
+        <h2>Blog</h2>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p><a class="btn" href="#">View details &raquo;</a></p>
       </div>
+      <div class="span4">
+        <h2>About</h2>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p><a class="btn" href="#">View details &raquo;</a></p>
+      </div>
+      <div class="span4">
+        <h2>Contact</h2>
+        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p><a class="btn" href="#">View details &raquo;</a></p>
+      </div>
+    </div>
 
-      <hr>
+    <hr>
 
-            <footer>
-        <p>&copy; Aaron Heuckroth, 2013. Photos courtesy of <a href="http://www.benjaminlehman.com/">Benjamin Lehman Photography</a>.</p>
-      </footer>
-    </div> <!-- /container -->
+    <footer>
+      <p>&copy; Aaron Heuckroth, 2013. Photos courtesy of <a href="http://www.benjaminlehman.com/">Benjamin Lehman Photography</a>.</p>
+    </footer>
+  </div> <!-- /container -->
 
   <script src="{{ site.url }}/assets/js/banner_response.js"></script>
 
