Added responsive backgrounds, screwed up body text coloring.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: Aaron Heuckroth
     <hr>
 
     <footer>
-      <p>&copy; Aaron Heuckroth, 2013. Photos courtesy of <a href="http://www.benjaminlehman.com/">Benjamin Lehman Photography</a>.</p>
+      <p>&copy; Aaron Heuckroth, 2013. Photos courtesy of <a href="http://www.benjaminlehman.com/">Benjamin Lehman Photography</a>. Background image from <a href="http://wallpaperswide.com/dark_background_2-wallpapers.html">wallpaperswide</a>.</p>
     </footer>
   </div> <!-- /container -->
 
