--- a/about/index.html
+++ b/about/index.html
@@ -3,31 +3,35 @@ layout: default
 title: Aaron Heuckroth
 ---
 
+<style>
+
+.headshot{
+  border-radius: 10px;
+}
+
+</style>
+
     <div class="container">
       <h1> This is where information about Aaron goes! </h1>
       <!-- Example row of columns -->
       <div class="row">
         <div class="span4">
-          <h2>Blog</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <div class="image">
+           <img src="{{ site.url }}/assets/img/aaron_headshot.jpg" class="headshot">
+         </div>
         </div>
-        <div class="span4">
-          <h2>About</h2>
+        <div class="span8">
+          <h2>This is a paragraph about Aaron.</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>          
           <p><a class="btn" href="#">View details &raquo;</a></p>
        </div>
-        <div class="span4">
-          <h2>Contact</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
       </div>
 
       <hr>
 
             <footer>
-        <p>&copy; Aaron Heuckroth, 2013. Photos courtesy of <a href="http://www.benjaminlehman.com/">Benjamin Lehman Photography</a>.</p>
+        <p>&copy; Aaron Heuckroth, 2013. Photo courtesy of <a href="http://ryan.norbauer.com/">Ryan Norbauer</a>.</p>
       </footer>
     </div> <!-- /container -->
 
