modifed project 1 page name again, since GitHub is stupid and keeps capitalizing it.

--- a/EC544/index.html
+++ b/EC544/index.html
@@ -4,5 +4,5 @@
 <span> Aaron Heuckroth, Erik Knechtel, Yu Lu, and Abhinav Nair
 <h3> Project Pages </h3>
 <ul>
-<li><a href=challenge_1.html>Challenges 1 and 2</a>
+<li><a href=Challenge_1.html>Challenges 1 and 2</a>
 </ul>
