For reals this time.

--- a/EC544/Challenge_4.html
+++ b/EC544/Challenge_4.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <script type="text/javascript"
-  src="processing-1.4.1.min"></script>
+  src="processing-1.4.1.min.js"></script>
 </head>
 <body>
 <title>EC544 Challenge 4</title>
