--- a/EC544/index.html
+++ b/EC544/index.html
@@ -5,5 +5,5 @@
 <h3> Project Pages </h3>
 <ul>
 <li><a href=Challenge_1.html>Challenges 1 and 2</a>
-<li>a href=Challenge_4.html>Challenge 4</a>
+<li><a href=Challenge_4.html>Challenge 4</a>
 </ul>
