Added circles visualization.

--- a/EC544/index.html
+++ b/EC544/index.html
@@ -6,4 +6,5 @@
 <ul>
 <li><a href=Challenge_1.html>Challenges 1 and 2</a>
 <li><a href=Challenge_4.html>Challenge 4</a>
+<li><a href=localization.html>Localization</a>
 </ul>
