--- a/EC544/localization.html
+++ b/EC544/localization.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <title>localization with circles</title>
-<canvas data-processing-sources="./circles/circle.pde"></canvas>
+<canvas data-processing-sources="./circles/circles.pde"></canvas>
 </body>
 </html>
