Added leader elect sketch.

--- a/EC544/index.html
+++ b/EC544/index.html
@@ -7,4 +7,5 @@
 <li><a href=Challenge_1.html>Challenges 1 and 2</a>
 <li><a href=Challenge_4.html>Challenge 4</a>
 <li><a href=localization.html>Localization</a>
+<li><a href=Challenge_7.html>Challenge 7</a>
 </ul>
