Removed Yu from credits.

--- a/EC544/index.html
+++ b/EC544/index.html
@@ -1,7 +1,7 @@
 <title> EC544 Project Demos </title>
 <h1> EC544 Project Demo Repository </h1>
 <h2> Group 3, Fall 2013, Boston University</h2>
-<span> Aaron Heuckroth, Erik Knechtel, Yu Lu, and Abhinav Nair
+<span> Aaron Heuckroth, Erik Knechtel, and Abhinav Nair
 <h3> Project Pages </h3>
 <ul>
 <li><a href=Challenge_1.html>Challenges 1 and 2</a>
