Updated frontpage text

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ title: Aaron Heuckroth
     <h1>Aaron Heuckroth</h1>
     <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
     <ol>
-      <li>Synthetic Biologist; Bio-Geek</li>
-      <li>Software Developer-in-Training</li>
+      <li>Computer Engineer</li>
+	  <li>Bio-Geek</li>
       <li>Musician</li>
     </ol>
   </div> <!-- End Header -->
