Removed useless dropdown.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Aaron Heuckroth
     <h3><i>/Āren&nbsp;Hĕkrôth/&nbsp;&nbsp;&nbsp;(n.)</i></h3>
     <ol>
       <li>Computer Engineer</li>
-	  <li>Bio-Geek</li>
+	  <li>Bio Geek</li>
       <li>Musician</li>
     </ol>
   </div> <!-- End Header -->
@@ -43,7 +43,7 @@ title: Aaron Heuckroth
     <hr>
 
     <footer>
-      <p>&copy; Aaron Heuckroth, 2013. Photos courtesy of <a href="http://www.benjaminlehman.com/">Benjamin Lehman Photography</a>. Background image from <a href="http://wallpaperswide.com/dark_background_2-wallpapers.html">wallpaperswide</a>.</p>
+      <p>&copy; Aaron Heuckroth, 2014. Photos courtesy of <a href="http://www.benjaminlehman.com/">Benjamin Lehman Photography</a>. Background image from <a href="http://wallpaperswide.com/dark_background_2-wallpapers.html">wallpaperswide</a>.</p>
     </footer>
   </div> <!-- /container -->
 
