--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@ title: Aaron Heuckroth
     <!-- Example row of columns -->
     <div class="row">
       <div class="span4">
-        <h2>Blog</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn" href="#">View details &raquo;</a></p>
+        <h2>About</h2>
+        <p>Aaron is a Computer Engineering PhD student at Boston University, where he works on laboratory automation and cyber-physical systems.</p>
+        <p><a class="btn" href="#">Learn more &raquo;</a></p>
       </div>
       <div class="span4">
-        <h2>About</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn" href="#">View details &raquo;</a></p>
+        <h2>Portfolio</h2>
+        <p>Projects include 3D-printable laboratory devices, autonomous RC cars, ray-tracing engines, top-down tank-shooter video games, and heavy metal songs about Julius Caesar.</p>
+        <p><a class="btn" href="#">Learn more &raquo;</a></p>
       </div>
       <div class="span4">
         <h2>Contact</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p>Looking to get in touch with Aaron? Contact info is over here!</p>
         <p><a class="btn" href="#">View details &raquo;</a></p>
       </div>
     </div>
