Changed frontpage formatting.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Aaron Heuckroth
     <div class="row">
       <div class="span4">
         <h2>About</h2>
-        <p>Aaron is a Computer Engineering PhD student at Boston University, where he works on laboratory automation and cyber-physical systems.</p>
+        <p>Aaron is a Computer Engineering PhD student at Boston University, where he builds tools for laboratory automation and cyber-physical systems.</p>
         <p><a class="btn" href="#">Learn more &raquo;</a></p>
       </div>
       <div class="span4">
@@ -39,11 +39,23 @@ title: Aaron Heuckroth
         <p><a class="btn" href="#">View details &raquo;</a></p>
       </div>
     </div>
+	
+	<div class="row">
+      <div class="span4">
+        <p><a class="btn" href="#">Learn more &raquo;</a></p>
+      </div>
+      <div class="span4">
+        <p><a class="btn" href="#">Learn more &raquo;</a></p>
+      </div>
+      <div class="span4">
+        <p><a class="btn" href="#">View details &raquo;</a></p>
+      </div>
+    </div>
 
     <hr>
 
     <footer>
-      <p>&copy; Aaron Heuckroth, 2014. Photos courtesy of <a href="http://www.benjaminlehman.com/">Benjamin Lehman Photography</a>. Background image from <a href="http://wallpaperswide.com/dark_background_2-wallpapers.html">wallpaperswide</a>.</p>
+      <p>&copy; Aaron Heuckroth 2014. Photos courtesy of <a href="http://www.benjaminlehman.com/">Benjamin Lehman Photography</a>. Background image from <a href="http://wallpaperswide.com/dark_background_2-wallpapers.html">wallpaperswide</a>.</p>
     </footer>
   </div> <!-- /container -->
 
