--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,6 @@ title: Aaron Heuckroth
 </style>
 
     <div class="container">
-      <h1> This is where information about Aaron goes! </h1>
       <!-- Example row of columns -->
       <div class="row">
         <div class="span4">
@@ -21,10 +20,9 @@ title: Aaron Heuckroth
          </div>
         </div>
         <div class="span8">
-          <h2>This is a paragraph about Aaron.</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>          
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <h2>About</h2>
+          <p>Aaron is a Computer Engineering PhD student at Boston University, where he builds tools for laboratory automation and cyber-physical systems.</p>
+          <p>He grew up in <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&es_th=1&ie=UTF-8#q=Menlo%20Park%2C%20CA">Menlo Park, CA</a> and received a BS in Microbiology and a BA in Classical Civilizations from the <a href="http://www.ucdavis.edu/">University of California, Davis</a> in 2012.</p>
        </div>
       </div>
 
