--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Aaron Heuckroth
     <div class="row">
       <div class="span4">
         <h2>About</h2>
-        <p>Aaron is a Computer Engineering PhD student at Boston University, where he builds tools for laboratory automation and cyber-physical systems.</p>
+        <p>Aaron is a Computer Engineering PhD student at Boston University, where works on builds tools for laboratory automation and cyber-physical systems.</p>
       </div>
       <div class="span4">
         <h2>Portfolio</h2>
