More About updates.

--- a/about/index.html
+++ b/about/index.html
@@ -20,11 +20,11 @@ title: Aaron Heuckroth
          </div>
         </div>
         <div class="span8">
-          <h2>About</h2>
+          <h2>About Aaron</h2>
           <p>Aaron is a Computer Engineering PhD student at Boston University, where he works with <a href="http://www.cidarlab.org">the CIDAR group</a> on tools for laboratory automation and cyber-physical systems.</p>
           <p>He grew up the Bay Area of California and received a BS in Microbiology and a BA in Classical Civilizations from the University of California, Davis in 2012. His undergraduate research focused on synthetic biology, and he competed in the <a href="http://2011.igem.org/Main_Page">2011 iGEM Competition</a>.</p>
 		  <p>He moved to Boston in 2012 to intern with synbio start-up <a href="http://www.ginkgobioworks.com">Ginkgo Bioworks</a>, where he developed laboratory protocols and programmed robots for high-throughput DNA assembly.</p>
-		  <p>A recent internship with <a href="http://www.autodesk.com">Autodesk</a> left him excited about 3D printing and its applications to science and engineering, particularly in the construction of low-cost, networkable laboratory devices.</p><br><br>
+		  <p>A recent internship with <a href="http://www.autodesk.com">Autodesk</a> left him excited about 3D printing and its applications to science and engineering, particularly in the construction of low-cost, networkable laboratory devices.</p>
 		  <p>When he is not programming or printing things, Aaron writes, records, and <a href="https://www.youtube.com/watch?v=tJl9o8l1hDA">performs</a> music under the alias <a href="http://www.soundcloud.com/nesciosquid">Nesciosquid.</a></p>
        </div>
       </div>
