Contact info changed.

--- a/contact/index.html
+++ b/contact/index.html
@@ -4,30 +4,28 @@ title: Aaron Heuckroth
 ---
 
     <div class="container">
-      <h1> This is where contact information goes! </h1>
+      <h1> Contact Information for Aaron Heuckroth </h1>
       <!-- Example row of columns -->
       <div class="row">
         <div class="span4">
-          <h2>Blog</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <h2>Email</h2>
+          <p><b>General:</b> <a href="mailto:aaron@heuckroth.com">aaron@heuckroth.com</a></p>
+		  <p><b>School:</b> <a href="mailto:awh@bu.edu">awh@bu.edu</a></p>
         </div>
         <div class="span4">
-          <h2>About</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <h2>Code</h2>
+          <p>GitHub: <a href="https://github.com/Nesciosquid">Nesciosquid</p>
        </div>
         <div class="span4">
-          <h2>Contact</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <h2>Social</h2>
+          <p>Twitter: <a href="https://twitter.com/Nesciosquid">@Nesciosquid</a></p>
         </div>
       </div>
 
       <hr>
 
             <footer>
-        <p>&copy; Aaron Heuckroth, 2013. Photos courtesy of <a href="http://www.benjaminlehman.com/">Benjamin Lehman Photography</a>.</p>
+        <p>&copy; Aaron Heuckroth, 2013.</p>
       </footer>
     </div> <!-- /container -->
 
