--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@ title: Aaron Heuckroth
 	
 	<div class="row">
       <div class="span4">
-        <p><a class="btn" href="#">Learn more &raquo;</a></p>
+        <p><a class="btn" href="/about">Learn more &raquo;</a></p>
       </div>
       <div class="span4">
-        <p><a class="btn" href="#">Learn more &raquo;</a></p>
+        <p><a class="btn" href="/portfolio">Learn more &raquo;</a></p>
       </div>
       <div class="span4">
-        <p><a class="btn" href="#">View details &raquo;</a></p>
+        <p><a class="btn" href="/contact">View details &raquo;</a></p>
       </div>
     </div>
 
