--- a/contact/index.html
+++ b/contact/index.html
@@ -4,19 +4,23 @@ title: Aaron Heuckroth
 ---
 
     <div class="container">
-      <h1> Contact Information for Aaron Heuckroth </h1>
+      <h1> Contact Information</h1>
       <!-- Example row of columns -->
       <div class="row">
-        <div class="span4">
+        <div class="span3">
           <h2>Email</h2>
           <p><b>General:</b> <a href="mailto:aaron@heuckroth.com">aaron@heuckroth.com</a></p>
 		  <p><b>School:</b> <a href="mailto:awh@bu.edu">awh@bu.edu</a></p>
         </div>
-        <div class="span4">
+        <div class="span3">
           <h2>Code</h2>
-          <p>GitHub: <a href="https://github.com/Nesciosquid">Nesciosquid</p>
+          <p>GitHub: <a href="https://github.com/Nesciosquid">Nesciosquid</a></p>
        </div>
-        <div class="span4">
+        <div class="span3">
+          <h2>Music</h2>
+          <p>Soundcloud: <a href="https://soundcloud.com/Nesciosquid">Nesciosquid</a></p>
+        </div>
+		<div class="span3">
           <h2>Social</h2>
           <p>Twitter: <a href="https://twitter.com/Nesciosquid">@Nesciosquid</a></p>
         </div>
