Updated About and Contact pages

--- a/about/index.html
+++ b/about/index.html
@@ -26,6 +26,7 @@ title: Aaron Heuckroth
 		  <p>He moved to Boston in 2012 to intern with synbio start-up <a href="http://www.ginkgobioworks.com">Ginkgo Bioworks</a>, where he developed laboratory protocols and programmed robots for high-throughput DNA assembly.</p>
 		  <p>A recent internship with <a href="http://www.autodesk.com">Autodesk</a> left him excited about 3D printing and its applications to science and engineering, particularly in the construction of low-cost, networkable laboratory devices.</p>
 		  <p>When he is not programming or printing things, Aaron writes, records, and <a href="https://www.youtube.com/watch?v=tJl9o8l1hDA">performs</a> music under the alias <a href="http://www.soundcloud.com/nesciosquid">Nesciosquid.</a></p>
+		  <p>Aaron is openly gay, difficult to offend, and he wants you to <a href="/contact">say hello!</a></p>
        </div>
       </div>
 
