--- a/contact/index.html
+++ b/contact/index.html
@@ -21,6 +21,10 @@ title: Aaron Heuckroth
           <p>Soundcloud: <a href="https://soundcloud.com/Nesciosquid">Nesciosquid</a></p>
         </div>
 		<div class="span3">
+          <h2>Video</h2>
+          <p>YouTube: <a href="https://www.youtube.com/channel/UCYmPYr4q3qFXxkIRyaJZ3jw">Aaron Heuckroth</a></p>
+        </div>
+		<div class="span3">
           <h2>Social</h2>
           <p>Twitter: <a href="https://twitter.com/Nesciosquid">@Nesciosquid</a></p>
         </div>
