More contact updates.

--- a/contact/index.html
+++ b/contact/index.html
@@ -24,6 +24,7 @@ title: Aaron Heuckroth
 		<div class="span3">
           <h2>Social</h2>
           <p>Twitter: <a href="https://twitter.com/Nesciosquid">@Nesciosquid</a></p>
+		  <P>LinkedIn: <a href="https://www.linkedin.com/profile/view?id=267307632">Aaron Heuckroth</a></p>
         </div>
       </div>
 
