add image to portfolio page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@ title: Aaron Heuckroth
       <div class="row">
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img data-src="holder.js/300x300" alt="...">
+      <img data-src="https://cloud.githubusercontent.com/assets/4042668/2848410/4ed82946-d0bd-11e3-9480-1b5013b7ab9d.png" alt="...">
       <div class="caption">
         <h3>Thumbnail label</h3>
         <p>...</p>
