--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,19 +4,8 @@ title: Aaron Heuckroth
 ---
 
     <div class="container">
-      <h1>Portfolio</h1>
+      <h1>Portfolio In Progress</h1>
 	  <hr>
-      <div class="row">
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img data-src="https://cloud.githubusercontent.com/assets/4042668/2848410/4ed82946-d0bd-11e3-9480-1b5013b7ab9d.png" alt="...">
-      <div class="caption">
-        <h3>Thumbnail label</h3>
-        <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-      </div>
-    </div>
-  </div>
 </div>
 
       <hr>
