Fix frontpage typo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Aaron Heuckroth
     <div class="row">
       <div class="span4">
         <h2>About</h2>
-        <p>Aaron is a Computer Engineering PhD student at Boston University, where works on builds tools for laboratory automation and cyber-physical systems.</p>
+        <p>Aaron is a Computer Engineering PhD student at Boston University, where he works with <a href="http://www.cidarlab.org">the CIDAR group</a> on tools for laboratory automation and cyber-physical systems.</p>
 		<p><a class="btn" href="/about">Learn more &raquo;</a></p>
       </div>
       <div class="span4">
