Fixed image url

--- a/ohyeah/index.html
+++ b/ohyeah/index.html
@@ -6,7 +6,7 @@ title: Aaron Heuckroth
 
 <link href="{{ site.url }}/assets/css/splash.css" rel="stylesheet">
 
-<img src="/assets/img/ohyeah.jpg">
+<img src="{{ site.url }}/assets/img/ohyeah.jpg">
 
   <script src="{{ site.url }}/assets/js/banner_response.js"></script>
 
